# openlibrary-local-db

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  process_data.py  pyproject.toml
api/: app.py
web/: index.html  package-lock.json  package.json
web/src/: App.jsx  languages.json
